--- a/META.yml
+++ b/META.yml
@@ -20,6 +20,8 @@ no_index:
     - t
 requires:
   CGI::Cookie: 0
+  Cwd: 0
+  File::Find: 0
   File::Path: 0
   Time::HiRes: 0
   URI: 0
@@ -28,4 +30,4 @@ requires:
   perl: 5.8.4
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.09
+version: 0.10
