--- a/META.yml
+++ b/META.yml
@@ -23,6 +23,7 @@ requires:
   Cwd: 0
   File::Find: 0
   File::Path: 0
+  IO::File: 0
   Time::HiRes: 0
   URI: 0
   XML::Simple: 0
@@ -30,4 +31,4 @@ requires:
   perl: 5.8.4
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.11
+version: 0.12
