--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 ---
 abstract: 'Lightweight web framework'
 author:
-  - ', 2012 Ohio-Pennsylvania Software, LLC.'
+  - 'Bizowie <http://bizowie.com>'
 build_requires:
   ExtUtils::MakeMaker: 6.59
 configure_requires:
@@ -31,4 +31,4 @@ requires:
   perl: 5.8.4
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.21
+version: 0.22
